// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index Page matches loading snapshot 1`] = `
<div>
  <div
    class="container"
  >
    <main
      class="main"
    >
      <h1
        class="title"
      >
        Hello, welcome to the JEDI Project
      </h1>
      <p
        class="description"
      >
        Greetings from the Backend:
         
        <code
          class="code"
        >
          loading...
        </code>
      </p>
      <a
        class="card"
        href="/incidents"
      >
        <h2>
          Incidents →
        </h2>
        <p>
          All incident entries
        </p>
      </a>
    </main>
  </div>
</div>
`;

exports[`Index Page matches snapshot with fetched data 1`] = `
<div>
  <div
    class="container"
  >
    <main
      class="main"
    >
      <h1
        class="title"
      >
        Hello, welcome to the JEDI Project
      </h1>
      <p
        class="description"
      >
        Greetings from the Backend:
         
        <code
          class="code"
        >
          Hello World!
        </code>
      </p>
      <a
        class="card"
        href="/incidents"
      >
        <h2>
          Incidents →
        </h2>
        <p>
          All incident entries
        </p>
      </a>
    </main>
  </div>
</div>
`;
